...
				<div class="flex flex-col">
					<div class="flex items-center gap-2">
						<UIcon
							name="mdi:rocket-launch-outline"
							class="size-5 text-secondary"
						/>
						<IonCardTitle class="text-base!">Welcome to The Earth App</IonCardTitle>
					</div>
					<IonCardSubtitle class="text-xs! my-1!">
						Complete to finish your first quest!
					</IonCardSubtitle>
				</div>
				<IonButton
...
