...
			:schema="signupSchema"
			@submit="handleSignup"
			@error="handleFormError"
			class="space-x-6 *:mb-4"
		>
			<UFormField
				label="Email (optional)"
				name="email"
			>
				<IonInput
					v-model="email"
					:disabled="loading"
					aria-label="Email"
...
					</template>
					<template v-else>
						<UIcon
							name="mdi:account-plus"
							class="mr-2"
						/>
						Sign Up
					</template>
				</IonButton>
			</div>

			<UAlert
				v-if="error"
...
